--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
-__pycache__
+# Python-generated files
+__pycache__/
+*.py[oc]
+build/
+dist/
+wheels/
+*.egg-info
+
+# Virtual environments
+.venv
+
+# Other stuff
 .vscode
 .env
 config.json
