--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "last-to-leave-bot"
+name = "LTV-Discord-Bot"
 version = "0.1.0"
 readme = "README.md"
 requires-python = ">=3.13"
