--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "audioop-lts==0.2.1 ; python_full_version >= '3.13'",
     "py-cord==2.6.1",
 ]
