--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "py-cord==2.7.0",
+    "py-cord[voice]==2.7.0",
 ]
